--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,9 @@ a{
     color: white;
     margin: 10px;
 }
+.hero {
+    width: 800px;
+    height: 500px;
+    margin: 0 auto;
+    padding: 30px;
+}
