about 페이지 완료

--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,58 @@
-
-*{
-    margin:0; /*(안)여백 :없음*/
-    padding:0; 
-}
-
-/* 선택자 { 속성1 : 속성값 1; 
-            속성2: 속성값2; 
-            계속...    
+/*css 기본선택자
+1) 전체선택자 : *
+2) 태그 선택자: 태그명 ex> p
+3) 클래스 선택자: .클래스명 ex> .my-app
+4) 아이디 선택자: #아이디명 ex> #title
+5) 그룹 선택자 : p, .my-app, #title
 */
 
-.logo {
+*{
+    margin: 0; /*(안)여백 : 없음*/
+    padding: 0; /*(바깥)여백 : 없음*/
+}
+
+a{color: crimson;
+    text-decoration: none;
+}
+
+
+/*선택자{
+    속성1: 속성값1;
+    속성2: 속성값2; } */
+
+.logo{
     width: 100px;
     height: 110px;
-    margin: 0 auto;
-    padding: 50px;
+    margin: 0 auto; /*수평 -중앙배치*/
+    padding: 50px; /* 상,하 50 픽셀*/
+    
 }
-    .opener {
-        position: absolute;
-        top: 100px;
-        right: 7%;
-        display: none;
-    }
-
+.opener{
+    /*버거였었다.*/
+    display: none;
+    position: absolute;
+    top: 100px;
+    right: 5%;
+}
 .menu{
-    background-color: #005891; /*배경 색상*/
+    padding: 20px; /* 상,하 50 픽셀*/
     text-align: center;
-    padding: 20px 0;
+    background-color: #005891; /*배경색상*/
+    margin: auto;
 }
-
-a{ 
+a{
     color: white;
     margin: 10px;
 }
-.hero {
+
+.hero{
     width: 800px;
-    height: 500px;
-    margin: 0 auto;
-    padding: 30px;
+    margin: 0 auto; 
+    padding: 20px; 
 }
+
 .hide{
-    display: none; /*화면에 표시안함*/
+    display: none; /* 화면에 표시: 안함*/
 }
 
 .movie{ /*클래스 movie의 스타일을 결정한다.*/
@@ -47,28 +60,32 @@ a{
     margin: 0 auto;
     font-size: 0;
 }
-.movie-title{
+
+.page-title{
     font-size: 22px;
     text-align: center;
-    text-transform: uppercase; /*대문자*/
-    margin: .2rem 0 1rem 0; /*밖 여백 상하 좌우 0.3 좌우 0* 상->우->하->왼 순서*/
- }
+    text-transform: uppercase; /* 대문자 */
+    margin: 2rem 0 1rem 0; /*상 ->우 하->왼 순서 시계방향 */
+}
 
-.movie-desc{
-    color: #555555;
+.page-desc{
+    text-align: center;
     font-size: 16px;
+    color: #555555; /*HEX 색상 표기법*/
+}
+.tip{
     text-align: center;
 }
+
 .social{
-    text-align: center; /*그림 <--- 텍스트*/
-    margin: 2rem 1rem; /*바깥 여백을 상하2배 좌우 기본값*/
-    padding: 20px 0;
+    text-align: center; /* 그림은 <-- 텍스트*/
+    margin: 2rem 1rem; /* 밖여백 상하 2배, 좌우 기본값*/
 }
-/* .contact{} h2 class = 무비 타이틀과 다른가>? */
 
 #line{
     margin: 3rem 0;/*위,아래 3rem 좌,우 0(=적용X)*/
 }
+
 .contact, .location{ /* 왜? <h2 class="movie-title"과 다른가?*/ 
     text-align: center;
 }
@@ -77,70 +94,59 @@ a{
     margin: 2rem 0;
     font-size: 1.2rem;
 }
+
 .location p:nth-child(2){ /*두개의 p중에서 두번째(자식요소)*/
     margin-bottom: 3.5rem;
     font-size: 0.9rem;
-
 }
-#closer{
-    font-size: 4rem;
+
+#closer {
+    font-size: 2rem;
     background-color: transparent;
     border: 0;
     color: white;
     display: block;
     margin: 0 0 10rem 0;
-    position: relative;
-    top: 60px;
-    left: 267;
+    /* text-align: right; */
 }
-@media screen and (max-width: 430px){
-   .opener{
-    display: block ; /* 블록은 보이게 하는것*/
-   }
-   .menu{
-    position: absolute;
-    right:0;
-    width: 7674418604651163%;
-    top:0;
-    height: 100vh;
-    background-color: rgba(19,30,68,0.8);
-    background-image: url(../images/mobile-bg1.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-   }
-   .menua{
-    display: block;
-    text-align: left;
-   }
-   }
-        .hero{
-        width: 100%;   /*가로폭 가득 채워서 */
-       }
-        .hero img{
-            width: 100%;   /*가로폭 가득 채워서 */
-            object-fit: cover; 
-        
-            
-        }
-        .movie 
-        {width: 100%;   /*가로폭 가득 채워서 */ 
-        }
-        .movie img{
 
-         width: 70%;   /*가로폭 가득 채워서 */
-        object-fit: cover; 
-        margin: 10% 15%;
-        }
-        .movie img:nth-of-type(2){ /* :nth -child(n) {----done} */
-            display: none; /*2번째 이미지는 숨김 ==> 피그마 설계를 반영? */
-        }
+/*반응형 웹 =모바일을 위한 미디어쿼리 삽입)*/
+@media screen and (max-width:430px) {
+    .opener{
+        display: block; /* block level element : 블럭요소 */
+    }
+    .menu{
+            position: absolute;
+            right: 0;
+            top: 0;
+            height: 100%;
+            background-color: rgba(0,0,0,0.8);
+    
     }
 
-/* 네이밍 규칙 
-케밥케이스
-movie _ title => moive -title 
-2.카멜 또는 케멀 케이스
-moive _title -->movie Title
+    .hero{
+        width: 430px;
+    }
+   .hero img{
+    width: 100%; /* 가록 폭 :가득 채워서*/
+    object-fit:  cover; /* 오브젝트-맞춤: 알맞게 (비율에 근거해서)*/
+   }
+   .movie{
+    width: 100%;
+   }
 
-Pascal case ==> 파스칼
-main method --> public  Main으로 쓰는것처럼 */
+   .movie img{
+    /* 2의 img에 적용*/
+    width: 75%;
+    margin:10% 15%; /* 좌우 15씩 위아래 10씩 합쳐서100으로*/
+    object-fit: cover;
+   }
+
+   .movie img:nth-of-type(2){
+    /* 두번째 이미지는 숨김*==>피그마 설계 반영.*/
+    display: none;
+   }
+
+}
+
+    
