--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ a{
     max-width: 800px;
     margin:0 auto;
 }
+.body1{
+    margin: 2;
+}
 .body1 img .body3 img {
 float: left;
 margin:  0 1rem 0 0
